javacc/src/main/java/org/openatom/javacc/calculator/Sql.java
/* Sql.java */
/* Generated By:JavaCC: Do not edit this line. Sql.java */
//像java�?样的包名定义,生成的java文件会带上此包名
package org.openatom.javacc.calculator;
//导入包引用同Java方式

/**
* 代码说明:
*   解析
*   CREATE TABLE TEST(
*       ID INT COMMENT 'XX',
*       NAME VARCHAR
*   );
*   CREATE DATABASE TEST;
*/
public class Sql implements SqlConstants {
    //可以再里面定义初始化信息，字符串接收方式，异常处�?..

    //此处的main方法不是必须，只是为了方便此次调测，后面的示例将去除
    public static void main(String[] args){
        Sql sqlParser = new Sql(System.in);
        try {
            String res = sqlParser.parseSql();
            System.out.println(res);
        }catch (Exception e){
            e.printStackTrace();
        }
    }

//定义语法
  final public String parseSql() throws ParseException {
    trace_call("parseSql");
    try {
Token token ;
    StringBuilder builder = new StringBuilder();builder.append("xxx");
      /*原始结构*/
          /*
          <CREATE> <TABLE> <VARIABLE_NAME>
          <RIGHT_PARENTHESES>
              (
              <VARIABLE_NAME> AttrituabeType() [<COMMENT> <SINGLE_QUOTATION_MARK> <COMMENT_CONTENT> <SINGLE_QUOTATION_MARK>] [<COMMA>]
              )*
          <LEFT_PARENTHESES> [<COMMENT> <SINGLE_QUOTATION_MARK> <COMMENT_CONTENT> <SINGLE_QUOTATION_MARK>] <SEMICOLON>
          */
          token = jj_consume_token(CREATE);
System.out.println(token.image);
      token = jj_consume_token(TABLE);
System.out.println(token.image);
      token = jj_consume_token(VARIABLE_NAME);
System.out.println(token.image);
      token = jj_consume_token(RIGHT_PARENTHESES);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VARIABLE_NAME:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        token = jj_consume_token(VARIABLE_NAME);
System.out.println(token.image);
        token = AttrituabeType();
System.out.println(token.image);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMENT:{
          token = jj_consume_token(COMMENT);
System.out.println(token.image);
          jj_consume_token(SINGLE_QUOTATION_MARK);
          token = jj_consume_token(COMMENT_CONTENT);
System.out.println(token.image);
          jj_consume_token(SINGLE_QUOTATION_MARK);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          token = jj_consume_token(COMMA);
System.out.println(token.image);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          ;
        }
      }
      jj_consume_token(LEFT_PARENTHESES);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMENT:{
        token = jj_consume_token(COMMENT);
System.out.println(token.image);
        jj_consume_token(SINGLE_QUOTATION_MARK);
        token = jj_consume_token(COMMENT_CONTENT);
System.out.println(token.image);
        jj_consume_token(SINGLE_QUOTATION_MARK);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
{if ("" != null) return builder.toString();}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parseSql");
    }
}

/*
 * 获取属�?�的类型
 */
  final public Token AttrituabeType() throws ParseException {
    trace_call("AttrituabeType");
    try {
    Token token;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
          token = jj_consume_token(INT);
        break;
        }
      case CHAR:{
          token = jj_consume_token(CHAR);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      return token;
    } finally {
      trace_return("AttrituabeType");
    }
}

  /** Generated Token Manager. */
  public SqlTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x1000,0x80,0x10,0x80,0x300,};
	}

  {
      enable_tracing();
  }
  /** Constructor with InputStream. */
  public Sql(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Sql(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new SqlTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Sql(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new SqlTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new SqlTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Sql(SqlTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(SqlTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   trace_token(token, "");
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	   trace_token(token, " (in getNextToken)");
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[15];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 5; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 15; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  private int trace_indent = 0;
/** Enable tracing. */
  final public void enable_tracing() {
	 trace_enabled = true;
  }

/** Disable tracing. */
  final public void disable_tracing() {
	 trace_enabled = false;
  }

  protected void trace_call(String s) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Call:	" + s);
	 }
	 trace_indent = trace_indent + 2;
  }

  protected void trace_return(String s) {
	 trace_indent = trace_indent - 2;
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Return: " + s);
	 }
  }

  protected void trace_token(Token t, String where) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Consumed token: <" + tokenImage[t.kind]);
	   if (t.kind != 0 && !tokenImage[t.kind].equals("\"" + t.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t.image) + "\"");
	   }
	   System.out.println(" at line " + t.beginLine + " column " + t.beginColumn + ">" + where);
	 }
  }

  protected void trace_scan(Token t1, int t2) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Visited token: <" + tokenImage[t1.kind]);
	   if (t1.kind != 0 && !tokenImage[t1.kind].equals("\"" + t1.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t1.image) + "\"");
	   }
	   System.out.println(" at line " + t1.beginLine + " column " + t1.beginColumn + ">; Expected token: <" + tokenImage[t2] + ">");
	 }
  }

}

//固定格式

